# astaroth

./: .clang-format  .gitignore  .gitmodules  1d-test_2main_8cc.html  1d-test_2main_8cc.js  1d-test_2main_8cc__incl.map  1d-test_2main_8cc__incl.md5  2d-test_2main_8cc.html  2d-test_2main_8cc.js  2d-test_2main_8cc__incl.map  2d-test_2main_8cc__incl.md5  3d__caching__implementations_8h.html  3d__caching__implementations_8h__dep__incl.map  3d__caching__implementations_8h__dep__incl.md5  3d__caching__implementations_8h_source.html  ANALYSIS_BASE.md  API__specification__and__user__manual_8md.html  CMakeLists.txt  CMakePresets.json  CONTRIBUTING_8md.html  Dockerfile  HOW_TO_REPRODUCE.txt  LICENCE_8md.html  PC__modulepardecs_8h.html  PC__modulepardecs_8h__dep__incl.map  PC__modulepardecs_8h__dep__incl.md5  PC__modulepardecs_8h_source.html  Pencil_2PC__modulepardecs_8h.html  Pencil_2PC__modulepardecs_8h_source.html  README.md  README_8md.html  __kiss__fft__guts_8h.html  __kiss__fft__guts_8h__dep__incl.map  __kiss__fft__guts_8h__dep__incl.md5  __kiss__fft__guts_8h__incl.map  __kiss__fft__guts_8h__incl.md5  __kiss__fft__guts_8h_source.html  ac__decomposition_8cc.html  ac__fft_8h.html  ac__fft_8h.js  (+2357 more)
acc-comm/: .clang-format  CMakeLists.txt  README.md  acm.cc  acm.h  acm_error.c  array.cc  array.h  buffer.cc  buffer.h  buffer_exchange.h  c_test.c  cuda_utils.h  datatypes.cc  datatypes.h  decomp.cc  decomp.h  errchk_cuda.h  error.h  halo_exchange.h  halo_exchange_packed.h  io.h  main.cc  math_utils.cc  math_utils.h  memory_resource.h  mpi_utils.cc  ndbuffer.cc  ndbuffer.h  pack.cc  pack.cu  pack.h  packet.h  partition.h  print_debug.h  segment.h  static_array.cc  static_array.h  tfm.cc  unit_test.cc  (+2 more)
acc-comm/acm/: acm.h  acm_error.h
acc-comm/benchmarks/: CMakeLists.txt  bm-1.sh  bm-1024.sh  bm-128.sh  bm-16.sh  bm-2.sh  bm-2048.sh  bm-256.sh  bm-32.sh  bm-4.sh  bm-4096.sh  bm-512.sh  bm-64.sh  bm-8.sh  bm.cc  bm.h  bm_collective_comm.cc  bm_pack.cc  bm_packet.cc  bm_pipelining.cc  bm_plot.py  bm_rank_reordering.cc  bm_run.sh  bm_scaling.cc  bm_topology.cc  bm_topology_v2.cc  bm_transfer.cc  bm_transfer_mpi.cc  bm_transfer_mpi_v2.cc  bm_transfer_p2p.cc  gen-acm-benchmarks.py  gen-scaling-benchmarks.py  mpi_utils_experimental.h
acc-comm/drafts/: algorithm.cu  reduce.cu  reduce.h  test_reduce.cc  transform.cu  transform.h
acc-comm/tests/: CMakeLists.txt  README.md  async_io.cc  async_io_basic_1d.cc  c_test.c  comm_test.cc  mpi-test.cc  mpi_test.cc  test_async_mpi.cc  test_async_mpi_io_simple.cc  test_comm.cc  test_halo_exchange.cc  test_mpi.cc  unit_test.cc
acc-comm/tmp/: build-thrust-v3.sh  datatypes copy.h  pack.cc  tfm-comm.cc  tfm.cc  thrust-test.cc
acc-runtime/: ANALYSIS_RUNTIME.md  CMakeLists.txt  README.md  cc  overrides.h  standalone_params.h
acc-runtime/Pencil/: DSL  equations.h  fieldecs.h  prerequisites.h  sedaq9vPN  solve.ac
acc-runtime/acc/: 3d_caching_implementations.h  CMakeLists.txt  ac.l  ac.y  ast.h  codegen.c  codegen.h  create_node.h  create_node_decl.h  expr.h  hash.h  hashtable.h  implementation.c  implementation.h  mem_access_helper_funcs.h  ms.l  ms.y  source_manager.c  source_manager.h  stencil_accesses.cpp  stencilgen copy.c  stencilgen.c  string_vec.h  tinyexpr.c  tinyexpr.h  vecs.h  warp_reduce.h
acc-runtime/api/: CMakeLists.txt  acc_runtime.cu  acc_runtime.h  acreal.h  arrays.cc  astaroth_analysis.h  common_kernels.cc  common_kernels.h  datatypes.h  device_details.h  device_headers.h  errchk.h  extern_arrays_decl.h  fft.cc  func_attributes.h  hip.h  host_datatypes.h  mapreduce.cuh  math_utils.h  math_utils_base.h  random.cuh  static_analysis.cc  static_analysis.h  user_kernel.h  vba.cc
acc-runtime/built-in/: CMakeLists.txt  default_values.h  functions.h  intrinsics.h  kernels.h  typedefs.h  variables.h
acc-runtime/dsl/: mhdsolver.ac
acc-runtime/pencil/: boundconds.h  tmp_stuff.h
acc-runtime/samples/: ANALYSIS_DSL.md
acc-runtime/stdlib/: CMakeLists.txt  api  average.h  bc.h  bicgstab.h  cg.h  colors.h  compact_operators.h  compact_poisson_operators.h  derivs.h  derivs.h_spacing_not_in_mapping_func  general_derivs.h  general_operators.h  geometric_multigrid.h  geometric_multigrid_core.h  grid.h  grid_extension.h  grid_transfer_functions.h  integrators.h  map.h  operators.h  optimized_integrators.h  pc_derivs.h  poisson.h  profiles.h  radiation_ray.h  reductions.h  shock.h  sink_particle.h  slope_limited_diffusion.h  smooth_max.h  spherical_harmonics.h  units.h  utils.h  work_in_progress_derivs.h  work_in_progress_operators.h
acc-runtime/stencil-access-generator/: .gitignore  build.sh  main.cpp
acc-runtime/tests/: 0.ac  1.ac  2.ac  3.ac  4.ac  5.ac  6.ac  mhd.ac
acc-runtime/transpilers/: -Wcounterexamples  CMakeLists.txt  ac.l  ac.y  ast.h  codegen.cpp  codegen.h  stencil_accesses.cpp  stencilgen.c  tinyexpr.c  vecs.h
python/: CMakeLists.txt  litgen_generate_bindings.py
python/pyastaroth/: __init__.py
python/pydef/: pyastaroth-impl.cc  pyastaroth-utils-impl.cc
runtime_compilation/: CMakeLists.txt  compiler.cpp  nocompiler.cpp
samples/bwtest/: CMakeLists.txt  bwtest-benchmark.cu  bwtest-io.cu  bwtest-stencil.cu  bwtest.cu  common.h  main.c  main.cu  main2.cu
samples/bwtest-mpi/: ANALYSIS_BWTEST-MPI.md  CMakeLists.txt
samples/microbenchmark/: ANALYSIS_MICROBENCHMARK.md  CMakeLists.txt  array.h  microbenchmark.cu
samples/microbenchmark-nn/: ANALYSIS_MICROBENCHMARK_NN.md  CMakeLists.txt  array.cu  array.h  backend-cudnn.cu  backend-miopen.cu  backend.h  microbenchmark-nn.cu
samples/mpitest/: ANALYSIS_MPI_TEST.md  CMakeLists.txt  main.cc
samples/plasma-meets-ai-workshop/: ANALYSIS_PLASMA-MEETS-AI-WORKSHOP.md  CMakeLists.txt  README.md  animate-snapshots copy.py  animate-snapshots.py  astaroth.conf  getting-started-with-astaroth.md
samples/standalone_mpi/: ANALYSIS_STANDALONE-MPI.md  CMakeLists.txt  README.md  config_loader.cc  host_forcing.cc  host_forcing.h  host_memory.cc  host_memory.h  main.cc  simulation_control.h  simulation_rng.cc  stencil_loader.h  (+3 more)
test/: CMakeLists.txt  build.sh  run_all_tests.sh  run_syntaxtest.sh
(+1730 files in other folders)
